Fix double border on project-titles

--- a/themes/escape-velocity/source/css/style.less
+++ b/themes/escape-velocity/source/css/style.less
@@ -646,8 +646,7 @@ figure.highlight {
 }
 .project-title {
     background:@quote-color;
-    border:1px solid #cccccc;
-    border-bottom:none;
+    border-top:1px solid #cccccc;
     padding:1em;
     span {
         font-weight:normal;
